# kindle-highlights-processor

./: README.md  alchemist.html  alchemist_notes.md  jung_introduction.html  jung_introduction_notes.md  process_kindle.py  pyproject.toml
.devcontainer/: devcontainer.json
outputs/: alchemist_notes.md  pyproject.toml
